fixed action-image z-index

--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -110,6 +110,7 @@
   height: 500px;
   width: 500px;
   overflow: visible;
+  z-index: 2;
 }
 
 /* 4K Screens */
